src/Pages/FollowUs.css
.followUs {
    font-size: 32px;
    text-align: center;
    margin-top: 0.8em;
 }
.socials {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
 .socialsIconContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
    padding-top: 8em;
 }

 .socialIcon {
    margin: 0em 1em 2em 1em;
 }

 .socialsBox {
    margin-top: 10em;
    border-radius: 5px;
 }

